# bitoken

./: .gitmodules  CMakeLists.txt  main.cpp  toolchain.cmake
libs/catch2/: catch.hpp
src/crypto/: CMakeLists.txt  CryptoHelper.cpp  CryptoHelper.h  ICiphertext.cpp  ICiphertext.h  ICryptoContext.cpp  ICryptoContext.h  IKeyPair.cpp  IKeyPair.h  IKeysGenerator.h  IPlainText.cpp  IPlainText.h  IPublicKey.cpp  IPublicKey.h  IRecryptKey.cpp  IRecryptKey.h  ISecretKey.cpp  ISecretKey.h  KeyPair.cpp  KeyPair.h  Recryptor.cpp  Recryptor.h
src/crypto/openFHE/: Ciphertext.cpp  Ciphertext.h  CryptoContext.cpp  CryptoContext.h  KeyPair.cpp  KeyPair.h  KeysGenerator.cpp  KeysGenerator.h  PlainText.cpp  PlainText.h  PublicKey.cpp  PublicKey.h  RecryptKey.cpp  RecryptKey.h  SecretKey.cpp  SecretKey.h
src/db/: CMakeLists.txt  DBConnectionParams.cpp  DBConnectionParams.h  DBQuery.cpp  DBQuery.h  IDBConnection.cpp  IDBConnection.h  IDBInitializer.cpp  IDBInitializer.h  IDBQuery.cpp  IDBQuery.h  IDBQueryIterator.cpp  IDBQueryIterator.h  IDBQueryResult.cpp  IDBQueryResult.h  IDBRow.cpp  IDBRow.h  IDBValue.cpp  IDBValue.h  MessagesManagerRepo.cpp  MessagesManagerRepo.h  ReKeysManagerRepo.cpp  ReKeysManagerRepo.h  UsersManagerRepo.cpp  UsersManagerRepo.h
src/db/ScyllaDB/: DBConnection.cpp  DBConnection.h  DBInitializer.cpp  DBInitializer.h  DBQueryIterator.cpp  DBQueryIterator.h  DBQueryResult.cpp  DBQueryResult.h  DBRow.cpp  DBRow.h  DBValue.cpp  DBValue.h  Feature.cpp  Feature.h
src/db/ScyllaDB/SQLScripts/: CreateMessages.cql  CreateReKeys.cql  CreateUsers.cql
src/fabric/: BaseObjectBuilder.cpp  BaseObjectBuilder.h
src/json/: CMakeLists.txt  JSONHelper.cpp  JSONHelper.h
src/misc/: FileUtils.cpp  FileUtils.h
src/model/: CMakeLists.txt  ConnectionsManager.cpp  ConnectionsManager.h  Core.cpp  Core.h  INode.cpp  INode.h  MessagesManager.cpp  MessagesManager.h  MessagesQueue.cpp  MessagesQueue.h  PoolManager.cpp  PoolManager.h  User.cpp  User.h
src/model/Messages/: IMessage.cpp  IMessage.h  TestMessage.cpp  TestMessage.h
src/tcp/: Buffer.cpp  Buffer.h  BufferWorm.cpp  BufferWorm.h  BuffersManager.cpp  BuffersManager.h  BuffersPool.cpp  BuffersPool.h  CMakeLists.txt  TcpClient.cpp  TcpClient.h  TcpMessagesManager.cpp  TcpMessagesManager.h  TcpServer.cpp  TcpServer.h
src/tcp/tcp_message_parts/: TcpMessageDPart.cpp  TcpMessageDPart.h  TcpMessageIPart.cpp  TcpMessageIPart.h  TcpMessageParts.cpp  TcpMessageParts.h  TcpMessageSPart.cpp  TcpMessageSPart.h
src/tests/: CMakeLists.txt  Catch.cpp  TestUtils.h
src/tests/crypto/: CMakeLists.txt  TestReEncrypt.cpp
src/tests/db/: CMakeLists.txt  TestDBConnection.cpp  TestDBInitializer.cpp  TestMessagesManagerRepo.cpp  TestReKeysManagerRepo.cpp  TestUsersManagerRepo.cpp
src/tests/json/: CMakeLists.txt  TestJSONHelper.cpp
src/tests/model/: CMakeLists.txt  TestMessagesQueue.cpp  TestUsers.cpp
src/tests/tcp/: CMakeLists.txt  TestBuffers.cpp  TestBuffersPool.cpp  TestTcp.cpp  TestTcpClient.cpp  TestTcpMessagesManager.cpp  TestTcpServer.cpp
src/tests/tools/: CMakeLists.txt  TestIoContextManager.cpp
src/tools/: CMakeLists.txt  CoreError.cpp  CoreError.h  IError.cpp  IError.h  IFuture.cpp  IFuture.h  IoContextManager.cpp  IoContextManager.h  signal_slots.h
